<resources>
    <string name="app_name" translatable="false">Expresso</string>
    <string name="quantity">Quantity</string>
    <string name="zero">0</string>
    <string name="name">Name</string>
    <string name="topping">Toppings</string>
    <string name="Whipped_Cream">Whipped Cream</string>
    <string name="Chocolate_Topping">Chocolate Topping</string>
    <string name="Total_Bill">Total</string>
    <string name="order">Order</string>
    <string name="thank_you">Thank You!</string>
</resources>