<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#D5676F">

    <EditText
        android:id="@+id/naam_batao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColorHint="@android:color/black"
        android:inputType="textCapWords" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:layout_marginTop="16sp"
        android:text="@string/topping"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        style="@style/Header_Text_Style"/>

    <CheckBox
        android:id="@+id/check_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6sp"
        android:layout_marginLeft="16sp"
        android:layout_marginTop="16sp"
        android:paddingLeft="18dp"
        android:text="@string/Whipped_Cream"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/check_id_chocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6sp"
        android:layout_marginLeft="16sp"
        android:layout_marginTop="16sp"
        android:paddingLeft="18dp"
        android:text="@string/Chocolate_Topping"
        android:textColor="@android:color/black"
        android:textSize="16sp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16sp"
        android:layout_marginTop="16sp"
        android:layout_marginBottom="16sp"
        android:text="@string/quantity"
        android:textColor="@android:color/black"
        android:textAllCaps="true"
        android:textSize="16sp"
        style="@style/Header_Text_Style"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="16sp"
            android:layout_marginBottom="4dp"
            android:onClick="decrement"
            android:text="-" />


        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:layout_marginBottom="16sp"
            android:text="1"
            android:textColor="@android:color/black"
            style="@style/Header_Text_Style"/>


        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="16sp"
            android:layout_marginBottom="4dp"
            android:onClick="increment"
            android:text="+" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16sp"
        android:layout_marginTop="16sp"
        android:layout_marginBottom="16sp"
        android:text="@string/Total_Bill"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        style="@style/Header_Text_Style"/>

    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16sp"
        android:layout_marginBottom="16sp"
        android:text="0"
        android:textColor="@android:color/black"
        android:textAllCaps="true"
        android:textSize="16sp"
        style="@style/Header_Text_Style"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16sp"
        android:onClick="aisehi"
        android:text="@string/order" />

</LinearLayout>